--- a/templates/quiz_page.html
+++ b/templates/quiz_page.html
@@ -29,40 +29,17 @@
             <div class="card-group">
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">TOP QUIZ!</h4>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <a href="/quiz"><button class="btn btn-primary" type="button">Go!</button></a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">TOP Songs!</h4>
-                        <div class="card">
-                            <div class="card-body"><a class="card-link" href="#">Link</a></div>
-                        </div>
+                        <h4 class="card-title">QUIZ!</h4>
+                        <p class="card-text">1. Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                        <input type="radio"> option 1<br>
+                        <input type="radio"> option 2<br>
+                        <input type="radio"> option 3<br>
+                        <input type="radio"> option 4 <br>
+                        <button class='btn btn-primary'>next!</button>
                     </div>
                 </div>
             </div>
-            <div class="card-group">
-                <div class="card">
-                    <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">Quiz 1</h4>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <button class="btn btn-primary" type="button">Go!</button></div>
-                </div>
-                <div class="card">
-                    <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">Quiz 2</h4>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <button class="btn btn-primary" type="button">Go!</button></div>
-                </div>
-                <div class="card">
-                    <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">Quiz 3</h4>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <button class="btn btn-primary" type="button">Go!</button></div>
-                </div>
-            </div>
+
             <div class="footer-basic" style="height: 45px;background-color: rgb(43,213,40);">
                 <footer>
                     <div class="social" style="background-color: #2bd528;"><a href="#" style="background-color: #fff857;"><i class="icon ion-social-instagram"></i></a><a href="#" style="background-color: #fff857;"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background-color: #fff857;"><i class="icon ion-social-twitter"></i></a>
