started playlist generator - on pause

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(43,213,40);">
-        <div class="container"><a class="navbar-brand" href="/" style="background-color: #ffffff;padding: 15px;">RecMe!</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="/" style="background-color: #ffffff;padding: 15px;">RecMe!</a>
+            <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
@@ -22,23 +23,25 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Alternative</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Pop</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Rock</a></li>
-                </ul><span class="navbar-text actions" style="background-color: #fff857;padding: 15px;"> <a class="login" href="/login">Log In</a><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></span></div>
+                </ul>
+                <span class="navbar-text actions" style="background-color: #fff857;padding: 15px;"><a class="login" href="/login">Log In</a><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></span>
+            </div>
         </div>
     </nav>
     <img src="static/img/music.png" style="width: 100%;">
             <div class="card-group">
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">TOP QUIZ!</h4>
+                        <h4 class="card-title">PLAYLIST GENERATOR!</h4>
                         <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <a href="/quiz"><button class="btn btn-primary" type="button">Go!</button></a>
+                        <a href="/playlist"><button class="btn btn-primary" type="button">Go!</button></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
                         <h4 class="card-title">TOP Songs!</h4>
                         <div class="card">
-                            <div class="card-body"><a class="card-link" href="#">Link</a></div>
+                            <div class="card-body"><a class="card-link" href="/#">Link</a></div>
                         </div>
                     </div>
                 </div>
@@ -48,37 +51,40 @@
                     <div class="card-body" style="background-color: #bfbfbf;">
                         <h4 class="card-title">Quiz 1</h4>
                         <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <button class="btn btn-primary" type="button">Go!</button></div>
+                        <a href="/quiz"><button class="btn btn-primary" type="button">Go!</button></a>
                 </div>
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
                         <h4 class="card-title">Quiz 2</h4>
                         <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <button class="btn btn-primary" type="button">Go!</button></div>
+                        <a href="/quiz"><button class="btn btn-primary" type="button">Go!</button></a>
                 </div>
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
                         <h4 class="card-title">Quiz 3</h4>
                         <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <button class="btn btn-primary" type="button">Go!</button></div>
-                </div>
-            </div>
-            <div class="footer-basic" style="height: 45px;background-color: rgb(43,213,40);">
-                <footer>
-                    <div class="social" style="background-color: #2bd528;"><a href="#" style="background-color: #fff857;"><i class="icon ion-social-instagram"></i></a><a href="#" style="background-color: #fff857;"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background-color: #fff857;"><i class="icon ion-social-twitter"></i></a>
-                        <a
-                            href="#" style="background-color: #fff857;"><i class="icon ion-social-facebook"></i></a>
+                        <a href="/quiz"><button class="btn btn-primary" type="button">Go!</button></a>
                     </div>
-                    <ul class="list-inline" style="background-color: #2bd528;">
-                        <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Home</a></li>
-                        <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Services</a></li>
-                        <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">About</a></li>
-                        <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Terms</a></li>
-                        <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Privacy Policy</a></li>
-                    </ul>
-                    <p class="copyright"></p>
-                </footer>
-            </div>
+                </div>
+                <div class="footer-basic" style="height: 45px;background-color: rgb(43,213,40);">
+                    <footer>
+                        <div class="social" style="background-color: #2bd528;">
+                            <a href="#" style="background-color: #fff857;"><i class="icon ion-social-instagram"></i></a>
+                            <a href="#" style="background-color: #fff857;"><i class="icon ion-social-snapchat"></i></a>
+                            <a href="#" style="background-color: #fff857;"><i class="icon ion-social-twitter"></i></a>
+                            <a
+                                href="#" style="background-color: #fff857;"><i class="icon ion-social-facebook"></i></a>
+                        </div>
+                        <ul class="list-inline" style="background-color: #2bd528;">
+                            <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Home</a></li>
+                            <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Services</a></li>
+                            <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">About</a></li>
+                            <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Terms</a></li>
+                            <li class="list-inline-item"><a href="#" style="background-color: #ff975c;">Privacy Policy</a></li>
+                        </ul>
+                        <p class="copyright"></p>
+                    </footer>
+                </div>
             <script src="static/js/jquery.min.js"></script>
             <script src="static/bootstrap/js/bootstrap.min.js"></script>
 </body>
