--- a/templates/quiz_page.html
+++ b/templates/quiz_page.html
@@ -30,11 +30,11 @@
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
                         <h4 class="card-title">QUIZ!</h4>
-                        <p class="card-text">1. Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <input type="radio"> option 1<br>
-                        <input type="radio"> option 2<br>
-                        <input type="radio"> option 3<br>
-                        <input type="radio"> option 4 <br>
+                        <p class="card-text">1. Which of these bands do you listen to the most?</p>
+                        <input type="radio"> Panic! at the Disco<br>
+                        <input type="radio"> Pierce the Veil<br>
+                        <input type="radio"> Blink 182<br>
+                        <input type="radio"> My Chemical Romance<br>
                         <button class='btn btn-primary'>next!</button>
                     </div>
                 </div>
