displays form results

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,8 +11,8 @@ iframe {
 
 .main-container {
 	min-height: 100vh;
-	background: linear-gradient(75deg, rgba(119, 205, 155, 0.82), rgba(69, 24, 115, 0.53));
-	display: flex;
+    background-color: #bfbfbf;
+    display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
