--- a/templates/emo_results.html
+++ b/templates/emo_results.html
@@ -14,34 +14,40 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(43,213,40);">
-        <div class="container"><a class="navbar-brand" href="/" style="background-color: #ffffff;padding: 15px;">RecMe!</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container">
+            <a class="navbar-brand" href="/" style="background-color: #ffffff;padding: 15px;">RecMe!</a>
+            <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Country</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#" style="background-color: #ff975c;color: rgb(70,87,101);">Country</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Alternative</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Pop</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Rock</a></li>
-                </ul><span class="navbar-text actions" style="background-color: #fff857;padding: 15px;"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></span></div>
+                </ul>
+                <span class="navbar-text actions" style="background-color: #fff857;padding: 15px;"> 
+                    <a class="login" href="/login">Log In</a>
+                    <a class="btn btn-light action-button" role="button" href="#">Sign Up</a>
+                    <a class="btn btn-light action-button" role="button" href="/create">Create Music Rec</a>
+                </span></div>
         </div>
     </nav>
+
     <img src="static/img/music.png" style="width: 100%;">
-	<main class="main-container">
-		<section>
-			<div class="form">
-                <p>input artist names, seperate with a comma</p>
-				<form action="">
-					<input type="search" value="">
-					<input type="submit" value="Create">
-                </form>
-			</div>
-			<div class="playlist">
-				<div class="loader">
-					<div class="inner-circle"></div>
-				</div>
-			</div>
-		</section>
-	</main>
+
+    <div class="card-group">
+            <div class="card">
+                <div class="card-body" style="background-color: #bfbfbf;">
+                    <h4 class="card-ti\\\tle">EMO MUSIC RESULTS!</h4>
+                    <p>{{emo_results}}</p>
+                </div>
+            </div>
+        </div>
+    
+
     <div class="footer-basic" style="height: 45px;background-color: rgb(43,213,40);">
             <footer>
                 <div class="social" style="background-color: #2bd528;"><a href="#" style="background-color: #fff857;"><i class="icon ion-social-instagram"></i></a><a href="#" style="background-color: #fff857;"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background-color: #fff857;"><i class="icon ion-social-twitter"></i></a>
@@ -60,5 +66,6 @@
         </div>
         <script src="static/js/jquery.min.js"></script>
         <script src="static/bootstrap/js/bootstrap.min.js"></script>
-</body>
-</html>
+    </body>
+    
+    </html>
