--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#" style="background-color: #ff975c;color: rgb(70,87,101);">Country</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Country</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Alternative</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Pop</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Rock</a></li>
@@ -33,7 +33,7 @@
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
                         <h4 class="card-title">PLAYLIST GENERATOR!</h4>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                        <p class="card-text">Use this feature after filling out a music recommendation form! The music form will recommend you artists to add to the playlist.</p>
                         <a href="/playlist"><button class="btn btn-primary" type="button">Go!</button></a>
                     </div>
                 </div>
@@ -49,9 +49,9 @@
             <div class="card-group">
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
-                        <h4 class="card-title">Quiz 1</h4>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        <a href="/quiz"><button class="btn btn-primary" type="button">Go!</button></a>
+                        <h4 class="card-title">Emo Music Recommendations</h4>
+                        <p class="card-text">Choose from a selection of EMO artists that I used to jam to!</p>
+                        <a href="/emo"><button class="btn btn-primary" type="button">Go!</button></a>
                 </div>
                 <div class="card">
                     <div class="card-body" style="background-color: #bfbfbf;">
