--- a/templates/ruk_form.html
+++ b/templates/ruk_form.html
@@ -5,26 +5,26 @@
     <div class="card-group">
         <div class="card">
             <div class="card-body" style="background-color: #bfbfbf;">
-                <h4 class="card-title">EMO MUSIC RECOMENDATION!</h4>
-                <form action='/emo_results' method='GET'>
+                <h4 class="card-title">RUK'S MUSIC RECOMENDATIONS!</h4>
+                <form action='/ruk_results' method='GET'>
                 <p>
                     <label for='emo_artists'>Check your top artists from the selection</label>
                     <br>
-                    <input type="checkbox" name="artist" value="patd"> Panic! at the Disco<br>
-                    <input type="checkbox" name="artist" value="ptv"> Pierce the Veil<br>
-                    <input type="checkbox" name="artist" value="blink182"> Blink 182<br>
-                    <input type="checkbox" name="artist" value="mcr"> My Chemical Romance<br>
-                    <input type="checkbox" name="artist" value="falloutboy"> Fall Out Boy<br>
-                    <input type="checkbox" name="artist" value="sws"> Sleeping With Sirens<br>
-                    <input type="checkbox" name="artist" value="jimmyeatworld"> Jimmy Eat World<br>
-                    <input type="checkbox" name="artist" value="linkinpark"> Linkin Park<br>
-                    <input type="checkbox" name="artist" value="paramore"> Paramore<br>
-                    <input type="checkbox" name="artist" value="fallinginreverse"> Falling In Reverse<br>
-                    <input type="checkbox" name="artist" value="greenday"> Green Day<br>
-                    <input type="checkbox" name="artist" value="maydayparade"> Mayday Parade<br>
-                    <input type="checkbox" name="artist" value="21pilots"> 21 Pilots<br>
-                    <input type="checkbox" name="artist" value="afa"> Asking for Alexandria<br>
-                    <input type="checkbox" name="artist" value="sum41"> Sum 41<br>
+                    <input type="checkbox" name="artist" value="the1975"> The 1975<br>
+                    <input type="checkbox" name="artist" value="joji"> Joji<br>
+                    <input type="checkbox" name="artist" value="peachpit"> Peach Pit<br>
+                    <input type="checkbox" name="artist" value="olivertree"> Oliver Tree<br>
+                    <input type="checkbox" name="artist" value="hobojohnson"> Hobo Johnson<br>
+                    <input type="checkbox" name="artist" value="stillwoozy"> Still Woozy<br>
+                    <input type="checkbox" name="artist" value="dodie"> Dodie<br>
+                    <input type="checkbox" name="artist" value="cavetown"> Cavetown<br>
+                    <input type="checkbox" name="artist" value="royblair"> Roy Blair<br>
+                    <input type="checkbox" name="artist" value="thegrowlers"> The Growlers<br>
+                    <input type="checkbox" name="artist" value="summersalt"> Summer Salt<br>
+                    <input type="checkbox" name="artist" value="unknownmortalorchestra"> Unknown Mortal Orchestra<br>
+                    <input type="checkbox" name="artist" value="macdemarco"> Mac DeMarco<br>
+                    <input type="checkbox" name="artist" value="brunomajor"> Bruno Major<br>
+                    <input type="checkbox" name="artist" value="jasonmraz"> Jason Mraz<br>
                     <br>
                     <button type="submit">Submit</button>
                 </p>                
