--- a/templates/ruk_results.html
+++ b/templates/ruk_results.html
@@ -1,4 +1,4 @@
-<!-- emo_results.html -->
+<!-- ruk_results.html -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -6,8 +6,8 @@
     <div class="card-group">
             <div class="card">
                 <div class="card-body" style="background-color: #bfbfbf;">
-                    <h4 class="card-ti\\\tle">EMO MUSIC RESULTS!</h4>
-                    <p>{{emo_results}}</p>
+                    <h4 class="card-ti\\\tle">RUK'S RECOMMENDATIONS!</h4>
+                    <p>{{ruk_results}}</p>
                 </div>
             </div>
         </div>
