--- a/templates/show_form.html
+++ b/templates/show_form.html
@@ -1,4 +1,4 @@
-<!-- emo_results.html -->
+<!-- show_form.html -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -6,8 +6,22 @@
     <div class="card-group">
             <div class="card">
                 <div class="card-body" style="background-color: #bfbfbf;">
-                    <h4 class="card-ti\\\tle">EMO MUSIC RESULTS!</h4>
-                    <p>{{emo_results}}</p>
+                    <h4 class="card-title">{{form.form_name}}</h4>
+                    <p>
+                        <div class="nav_container">
+                            <button class='header_btn' onclick="location.href='/form/{{ form._id }}/edit';">Edit Form</button>
+                            <button type='submit' form='delete_form' class='header_btn'>Delete Form</button>
+                        </div>
+                        <p>
+
+                        </p>
+                        {% for artist in form.artists %}
+                        <input type="checkbox" name="artist" value="{{artist}}"> {{artist}} <br> 
+                        {% endfor %}
+                        <form method='POST' id='delete_form' action='/form/{{form._id}}/delete'>
+                            <input type='hidden' name='_method' value='DELETE'>
+                        </form>
+                    </p>
                 </div>
             </div>
         </div>
