--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,26 @@
         <link rel="stylesheet" href="../static/css/styles.css">
 
         <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(43,213,40);">
-            <div class="container"><a class="navbar-brand" href="/" style="background-color: #ffffff;padding: 15px;">RecMe!</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container">
+                <a class="navbar-brand" href="/" style="background-color: #ffffff;padding: 15px;">RecMe!</a>
+                <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav mr-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#" style="background-color: #ff975c;color: rgb(70,87,101);">Country</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Alternative</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Pop</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="background-color: #ff975c;">Rock</a></li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link active" href="#" style="background-color: #ff975c;color: rgb(70,87,101);">Country</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="#" style="background-color: #ff975c;">Alternative</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="#" style="background-color: #ff975c;">Pop</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="#" style="background-color: #ff975c;">Rock</a>
+                        </li>
                     </ul>
                     <span class="navbar-text actions" style="background-color: #fff857;padding: 15px;"> 
                         <a class="login" href="/login">Log In</a>
